$Id$

-- 2010-02-23 version 6.x-2.x-dev
* #716274 Clone Profile incompatible with PCRE <7.0

-- 2010-02-21 version 6.x-2.x-dev
* #701736 warning after update from fck-editor 6.x-1.4 to fck-editor 6.x-2.0 and update.php

-- 2010-01-31 version 6.x-2.x-dev
* #678170 Loading fckeditor.config.js from theme path won't always work
* Tag as version 6.x-2.0

-- 2009-12-30 version 6.x-2.x-dev
* #661884 Sometimes gets error "warning: Invalid argument supplied for foreach() in fckeditor.module on line 1114."

-- 2009-12-10 version 6.x-2.x-dev
* #639938 Update some links to http://ckeditor.com and add warnings about FCKeditor vs. CKEditor
* Small fix for upgrading from 1.4 to 2.0

-- 2009-11-02 version 6.x-2.x-dev
* #620226 notice: Undefined index: excl , simple_incl
* #620242 %checkfile in ...%checkfile could not be found
* #600820 webform + fckeditor
* #257581 german translation for d6

-- 2009-10-26 version 6.x-2.x-dev
* #614612 Fix compatibility with postgresql
* Tag as version 6.x-2.0-rc2

-- 2009-10-24 version 6.x-2.x-dev
* Tag as version 6.x-2.0-rc1

-- 2009-10-22 version 6.x-2.x-dev
* Update the translation sources (text in t() function calls)

-- 2009-10-06 version 6.x-2.x-dev
* Tag as version 6.x-2.0-beta4

-- 2009-10-05 version 6.x-2.x-dev
* #318895 FCKEditor Templates

-- 2009-10-04 version 6.x-2.x-dev
* #591502 FCKeditor's excl_regex variable is not set on install, but only when a specific FCKeditor profile is saved
* #588470 fckeditor_user_delegate error after upgrading to php 5.3
* #585394 drupalbreak russian translation problem
* #591456 Integration with Nodewords 6.x-1.2
* #537296 safari issues - undone because of fix in FCKeditor 2.6.5
* #514796 Different base styles for each textarea

-- 2009-09-14 version 6.x-2.x-dev
* Tag as version 6.x-2.0-beta3

-- 2009-09-08 version 6.x-2.x-dev
* #358999 Width definition not operative (FCKeditor in a popup)
* #338923 Improve description of security setting