@@ -1,5 +1,8 @@
 $Id$
 
+-- 2010-02-25 version 6.x-2.x-dev
+* #724584 Three small typos in the file 'fckeditor.config.js'
+
 -- 2010-02-23 version 6.x-2.x-dev
 * #716274 Clone Profile incompatible with PCRE <7.0
 
